# camera-streaming-app

./: .gitignore  README.md
VideoStreamingApp/: App.tsx  VideoComponent.tsx  package.json
VideoStreamingApp/android/app/: build.gradle
VideoStreamingApp/android/app/src/debug/: AndroidManifest.xml
VideoStreamingApp/android/app/src/debug/java/com/videostreamingapp/: ReactNativeFlipper.java
VideoStreamingApp/android/app/src/main/java/com/videostreamingapp/: MainActivity.java  MainApplication.java
VideoStreamingApp/android/app/src/release/java/com/videostreamingapp/: ReactNativeFlipper.java
VideoStreamingApp/ios/: Podfile
VideoStreamingApp/ios/VideoStreamingApp/: AppDelegate.mm  Info.plist
VideoStreamingApp/ios/VideoStreamingApp.xcodeproj/: project.pbxproj
raspberry-pi/: pyproject.toml
raspberry-pi/streamer/: app.py  config.py  errors.py  models.py  request.py  serialization.py
raspberry-pi/streamer/routes/main/: blueprint.py  get.py
raspberry-pi/streamer/routes/users/: api.py  authorize.py  blueprint.py  get.py  post.py  schema.py
raspberry-pi/streamer/routes/video/: blueprint.py  get.py
raspberry-pi/streamer/templates/: index.html
